# CodingPractice

./: .gitignore  .pre-commit-config.yaml  Makefile  README  pyproject.toml
src/: frequency_sort.py  group_anagrams.py  local_rag.py  main.py  max_profit.py  text_analysis.py
src/problems/: anagram_calculator.py  arraysorting.py  maximum_subarray.py
tests/: test_arraysorting.py  test_frequency_sort.py  test_group_anagroms.py  test_maximum_subarray.py
tests/unit/: test_anagram_calculator.py  test_max_profit.py
