[project]
name = "hackerrank"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "uvicorn>=0.24.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
]
